configurando ADMIN e USER